--- a/src/uis/MainWindowX.ui
+++ b/src/uis/MainWindowX.ui
@@ -339,7 +339,6 @@
     <addaction name="actionNew"/>
     <addaction name="actionOpen"/>
     <addaction name="separator"/>
-    <addaction name="actionSave"/>
     <addaction name="actionSaveAs"/>
     <addaction name="separator"/>
     <addaction name="actionClose"/>
@@ -395,7 +394,7 @@
   </action>
   <action name="actionSaveAs">
    <property name="text">
-    <string>Zapisz jako...</string>
+    <string>Eksportuj...</string>
    </property>
   </action>
   <action name="actionRotate90DegreesRight">
